Fixing add and remove button shifting on product items. Also added css for the svg remove icon, and changed the svg code a bit. Hopefully this makes the svg icon show up on mobile

--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -44,3 +44,9 @@
     color: #ac8b81;
     font-weight: 700;
 }
+.svg {
+  display: inline-block;    /* make sure it’s not being hidden */
+  width: 16px; /* bump up to something easily tappable on mobile */
+  height: 16px;
+  color: #CAAFA7; /* drives the fill via currentColor */
+}
